avancement sur les references

--- a/views/references.html.twig
+++ b/views/references.html.twig
@@ -14,15 +14,9 @@
 	<section class="intro push-top {% if ress.isMobile ==  false %}desktop{% endif %}"></section>
 	<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
 		<div id="vamos" class="ref">
-			<div class="wrapper">
-				<div class="bg"></div>
-				<div class="mask">
-					<div class="cover"></div>
-				</div>
-			</div>
+			<div class="wrapper"><div class="bg"></div></div>
 			<div class="pictures">
 				<img class="logo-ref svg" src="/assets/img/references/w_logo_vamos.svg" alt="Logo Vamos !">
-				<img class="maquette-ref" src="/assets/img/references/fiche-contact2-test.png" alt="Maquette Vamos">
 			</div>
 			<div class="row">
 				<div class="infos">
@@ -39,15 +33,9 @@
 			</div>
 		</div>
 		<div id="amnesty" class="ref">
-			<div class="wrapper">
-				<div class="bg"></div>
-				<div class="mask">
-					<div class="cover"></div>
-				</div>
-			</div>
+			<div class="wrapper"><div class="bg"></div></div>
 			<div class="pictures">
 				<img class="logo-ref svg" src="/assets/img/references/amnesty-logo-black.svg" alt="Logo Amnesty">
-				<img class="maquette-ref" src="/assets/img/references/amnesty-iphone.png" alt="Maquette Amnesty">
 			</div>
 			<div class="row">
 				<div class="infos">
@@ -70,15 +58,9 @@
 			</div>
 		</div>
 		<div id="horizon" class="ref">
-			<div class="wrapper">
-				<div class="bg"></div>
-				<div class="mask">
-					<div class="cover"></div>
-				</div>
-			</div>
+			<div class="wrapper"><div class="bg"></div></div>
 			<div class="pictures">
 				<img class="logo-ref svg" src="/assets/img/references/horizon-logo.svg" alt="Logo COP 21">
-				<img class="maquette-ref" src="/assets/img/references/horizon-home-test.png" alt="Maquette Horizon">
 			</div>
 			<div class="row">
 				<div class="infos">
@@ -89,6 +71,56 @@
 						Une approche agile a aussi était utilisée pour ce projet qui été composé de 2 lead développeurs et 1 Scrum Master.
 					</p>
 					<a href="http://cop21horizon.com/fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a>
+				</div>
+			</div>
+		</div>
+		<div id="ffb-public" class="ref">
+			<div class="wrapper"><div class="wrapper"><div class="bg"></div></div></div>
+			<div class="pictures">
+				<img class="logo-ref svg" src="/assets/img/references/logo-ffb.svg" alt="Logo FFB">
+			</div>
+			<div class="row">
+				<div class="infos">
+					<h2>FFB Public</h2>
+					<p>
+						Dans le cadre de la refonte de son système d'information, Kilix travaille en collaboration avec la FFB pour réaliser ce chantier d'envergure divisé en 3 parties.
+						La première parties étant la refonte du site grand public.<br>
+						Un des challenge relevé est la réalisation du projet au forfait sans faire de concession sur l'Agilité.
+						Ceci a nécessité de former les acteurs de la FFB à la culture agile et de les accompagner tout au long du projet.
+					</p>
+					<a href="https://www.ffbridge.fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a>
+				</div>
+			</div>
+		</div>
+		<div id="ffb" class="ref">
+			<div class="wrapper"><div class="bg"></div></div>
+			<div class="pictures">
+				<img class="logo-ref svg" src="/assets/img/references/logo-ffb.svg" alt="Logo FFB">
+			</div>
+			<div class="row">
+				<div class="infos">
+					<h2>FFB - Espaces Connectés</h2>
+					<p>
+						Ce projet important est aussi composé de 2 parties en plus du site public qui sont, l'espace licencié et l'espace de gestion.<br>
+						Pour cela, Kilix a fait appel a un coach Agile et a utilisé des méthodes agile tels que la gestion par la valeur perçue et l'identification d'un MVP (Minimum Viable Product). Kilix a aussi mis en place au sein de son equipe une culture du Workshop, ateliers de travail ayant pour but de décomplexifier le métier.
+					</p>
+					{# <a href="https://www.ffbridge.fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a> #}
+				</div>
+			</div>
+		</div>
+		<div id="michelin" class="ref">
+			<div class="wrapper"><div class="bg"></div></div>
+			<div class="pictures">
+				<img class="logo-ref svg" src="/assets/img/references/logo-michelin.svg" alt="Logo Michelin">
+			</div>
+			<div class="row">
+				<div class="infos">
+					<h2>Michelin</h2>
+					<p>
+						Michelin voulait développer une application permettant de générer des devis à partir d'une couverture personalisée de leur guide. Pour réaliser ce projet, Kilix a utilisé le canvas pour avoir un rendu en temps réel de la personalisation.<br>
+						De plus le site ce devait d'etre multilingue aussi bien pour le contenu du site que pour les guides à personaliser.
+					</p>
+					<a href="http://simgm.michelin.fr/fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a>
 				</div>
 			</div>
 		</div>
