--- a/views/references.html.twig
+++ b/views/references.html.twig
@@ -14,114 +14,126 @@
 	<section class="intro push-top {% if ress.isMobile ==  false %}desktop{% endif %}"></section>
 	<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
 		<div id="vamos" class="ref">
-			<div class="wrapper"><div class="bg"></div></div>
-			<div class="pictures">
-				<img class="logo-ref svg" src="/assets/img/references/w_logo_vamos.svg" alt="Logo Vamos !">
-			</div>
-			<div class="row">
-				<div class="infos">
-					<h2>Vamos</h2>
-					<p>
-						Vamos est le CRM-ERP (Solution logicielle de gestion commerciale et administrative) développé par Kilix pour Extia.
-						Pour ce projet Kilix a appliqué différentes stratégie agile, tels que la gestion par la valeur ou encore le pilotage de projets par les risques.<br>
-						Une équipe de 5 développeurs, 1 Scrum Master et 1 UI/UX Designer travail sur ce projet.
-						Il met en place des technologies qui ont fait leur preuves (Symfony, PostgreSQL) mais aussi des technologies plus récentes (NodeJS, ReactJS).
-						Pour s'adapter au mieux aux besoins du client.
-					</p>
-					{# <a href="http://cop21horizon.com/fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a> #}
-				</div>
+			<div class="wrapper">
+			  <img class="maquette-ref" src="/assets/img/references/vamos-m.png" alt="Maquette Vamos !">
+				<article>
+			  	<div class="pic">
+						<img class="logo-ref svg" src="/assets/img/references/w_logo_vamos.svg" alt="Logo Vamos !">
+					</div>
+					<div class="infos">
+						<h2>Vamos</h2>
+						<p>
+							Vamos est le CRM-ERP (Solution logicielle de gestion commerciale et administrative) développé par Kilix pour Extia.
+							Pour ce projet Kilix a appliqué différentes stratégie agile, tels que la gestion par la valeur ou encore le pilotage de projets par les risques.<br>
+							Une équipe de 5 développeurs, 1 Scrum Master et 1 UI/UX Designer travail sur ce projet.
+							Il met en place des technologies qui ont fait leur preuves (Symfony, PostgreSQL) mais aussi des technologies plus récentes (NodeJS, ReactJS).
+							Pour s'adapter au mieux aux besoins du client.
+						</p>
+						{# <a href="http://cop21horizon.com/fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a> #}
+					</div>
+				</article>
 			</div>
 		</div>
 		<div id="amnesty" class="ref">
-			<div class="wrapper"><div class="bg"></div></div>
-			<div class="pictures">
-				<img class="logo-ref svg" src="/assets/img/references/amnesty-logo-black.svg" alt="Logo Amnesty">
-			</div>
-			<div class="row">
-				<div class="infos">
-					<h2>Amnesty</h2>
-					<p>
-						Amnesty souhaite refondre sont site <a href="http://amnesty.fr">amnesty.fr</a>.
-						Dans ce cadre, Kilix a réalisé un premier projet consistant à développer la home page du site mobile amnesty.fr.
-						Ce projet avait pour objectif de tester des hypothèse technique et fonctionnelle:
-					</p>
-					<ul>
-						<li>Vérifier l'amélioration du parvours utilisateur et de l'attrait du site</li>
-						<li>Tester une solution technique: <a href="http://prismic.io">prismic.io</a></li>
-						<li>Vérifier la capacité pour Kilix et Amnesty à travailler ensemble dans une logique Agile</li>
-					</ul>
-					<p>
-						Suite à ce projet, Kilix a commencé la refonte globale du site amnesty.fr.
-					</p>
-					{# <a href="http://amnesty.fr" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a> #}
-				</div>
+			<div class="wrapper">
+			  <img class="maquette-ref" src="/assets/img/references/amnesty-m.png" alt="Maquette Amnesty">
+			  <article>
+			  	<div class="pic">
+				  	<img class="logo-ref svg" src="/assets/img/references/amnesty-logo-black.svg" alt="Logo Amnesty">
+				  </div>
+					<div class="infos">
+						<h2>Amnesty</h2>
+						<p>
+							Amnesty souhaite refondre sont site <a href="http://amnesty.fr">amnesty.fr</a>.
+							Dans ce cadre, Kilix a réalisé un premier projet consistant à développer la home page du site mobile amnesty.fr.
+							Ce projet avait pour objectif de tester des hypothèse technique et fonctionnelle:
+						</p>
+						<ul>
+							<li>Vérifier l'amélioration du parvours utilisateur et de l'attrait du site</li>
+							<li>Tester une solution technique: <a href="http://prismic.io">prismic.io</a></li>
+							<li>Vérifier la capacité pour Kilix et Amnesty à travailler ensemble dans une logique Agile</li>
+						</ul>
+						<p>
+							Suite à ce projet, Kilix a commencé la refonte globale du site amnesty.fr.
+						</p>
+						{# <a href="http://amnesty.fr" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a> #}
+					</div>
+				</article>
 			</div>
 		</div>
 		<div id="horizon" class="ref">
-			<div class="wrapper"><div class="bg"></div></div>
-			<div class="pictures">
-				<img class="logo-ref svg" src="/assets/img/references/horizon-logo.svg" alt="Logo COP 21">
-			</div>
-			<div class="row">
-				<div class="infos">
-					<h2>Horizon</h2>
-					<p>
-						L'objectif de Horizon est de développer un ensemble de plateformes permetant au public de disposer d'outils de visualisation des tendances sur les réseaux en temps réel.
-						Dans cette optique, Kilix a développé la première plateforme de présentation des résultats d'analyse des réseaux sociaux pour la conférence Climat COP21.<br>
-						Une approche agile a aussi était utilisée pour ce projet qui été composé de 2 lead développeurs et 1 Scrum Master.
-					</p>
-					<a href="http://cop21horizon.com/fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a>
-				</div>
+			<div class="wrapper">
+			  <img class="maquette-ref" src="/assets/img/references/cop21-m.png" alt="Maquette Horizon">
+			  <article>
+			  	<div class="pic">
+			  		<img class="logo-ref svg" src="/assets/img/references/horizon-logo.svg" alt="Logo Horizon">
+			  	</div>
+					<div class="infos">
+						<h2>Horizon</h2>
+						<p>
+							L'objectif de Horizon est de développer un ensemble de plateformes permetant au public de disposer d'outils de visualisation des tendances sur les réseaux en temps réel.
+							Dans cette optique, Kilix a développé la première plateforme de présentation des résultats d'analyse des réseaux sociaux pour la conférence Climat COP21.<br>
+							Une approche agile a aussi était utilisée pour ce projet qui été composé de 2 lead développeurs et 1 Scrum Master.
+						</p>
+						<a href="http://cop21horizon.com/fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a>
+					</div>
+				</article>
 			</div>
 		</div>
 		<div id="ffb-public" class="ref">
-			<div class="wrapper"><div class="wrapper"><div class="bg"></div></div></div>
-			<div class="pictures">
-				<img class="logo-ref svg" src="/assets/img/references/logo-ffb.svg" alt="Logo FFB">
-			</div>
-			<div class="row">
-				<div class="infos">
-					<h2>FFB Public</h2>
-					<p>
-						Dans le cadre de la refonte de son système d'information, Kilix travaille en collaboration avec la FFB pour réaliser ce chantier d'envergure divisé en 3 parties.
-						La première parties étant la refonte du site grand public.<br>
-						Un des challenge relevé est la réalisation du projet au forfait sans faire de concession sur l'Agilité.
-						Ceci a nécessité de former les acteurs de la FFB à la culture agile et de les accompagner tout au long du projet.
-					</p>
-					<a href="https://www.ffbridge.fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a>
-				</div>
+			<div class="wrapper">
+			  <img class="maquette-ref" src="/assets/img/references/ffb-public-m.png" alt="Maquette FFB">
+			  <article>
+			  	<div class="pic">
+				  	<img class="logo-ref svg" src="/assets/img/references/logo-ffb.svg" alt="Logo FFB">
+				  </div>
+					<div class="infos">
+						<h2>FFB Public</h2>
+						<p>
+							Dans le cadre de la refonte de son système d'information, Kilix travaille en collaboration avec la FFB pour réaliser ce chantier d'envergure divisé en 3 parties.
+							La première parties étant la refonte du site grand public.<br>
+							Un des challenge relevé est la réalisation du projet au forfait sans faire de concession sur l'Agilité.
+							Ceci a nécessité de former les acteurs de la FFB à la culture agile et de les accompagner tout au long du projet.
+						</p>
+						<a href="https://www.ffbridge.fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a>
+					</div>
+				</article>
 			</div>
 		</div>
 		<div id="ffb" class="ref">
-			<div class="wrapper"><div class="bg"></div></div>
-			<div class="pictures">
-				<img class="logo-ref svg" src="/assets/img/references/logo-ffb.svg" alt="Logo FFB">
-			</div>
-			<div class="row">
-				<div class="infos">
-					<h2>FFB - Espaces Connectés</h2>
-					<p>
-						Ce projet important est aussi composé de 2 parties en plus du site public qui sont, l'espace licencié et l'espace de gestion.<br>
-						Pour cela, Kilix a fait appel a un coach Agile et a utilisé des méthodes agile tels que la gestion par la valeur perçue et l'identification d'un MVP (Minimum Viable Product). Kilix a aussi mis en place au sein de son equipe une culture du Workshop, ateliers de travail ayant pour but de décomplexifier le métier.
-					</p>
-					{# <a href="https://www.ffbridge.fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a> #}
-				</div>
+			<div class="wrapper">
+			  <img class="maquette-ref" src="/assets/img/references/ffb-m.png" alt="Maquette FFb">
+			  <article>
+			  	<div class="pic">
+				  	<img class="logo-ref svg" src="/assets/img/references/logo-ffb.svg" alt="Logo FFB">
+			  	</div>
+					<div class="infos">
+						<h2>FFB - Espaces Connectés</h2>
+						<p>
+							Ce projet important est aussi composé de 2 parties en plus du site public qui sont, l'espace licencié et l'espace de gestion.<br>
+							Pour cela, Kilix a fait appel a un coach Agile et a utilisé des méthodes agile tels que la gestion par la valeur perçue et l'identification d'un MVP (Minimum Viable Product). Kilix a aussi mis en place au sein de son equipe une culture du Workshop, ateliers de travail ayant pour but de décomplexifier le métier.
+						</p>
+						{# <a href="https://www.ffbridge.fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a> #}
+					</div>
+				</article>
 			</div>
 		</div>
 		<div id="michelin" class="ref">
-			<div class="wrapper"><div class="bg"></div></div>
-			<div class="pictures">
-				<img class="logo-ref svg" src="/assets/img/references/logo-michelin.svg" alt="Logo Michelin">
-			</div>
-			<div class="row">
-				<div class="infos">
-					<h2>Michelin</h2>
-					<p>
-						Michelin voulait développer une application permettant de générer des devis à partir d'une couverture personalisée de leur guide. Pour réaliser ce projet, Kilix a utilisé le canvas pour avoir un rendu en temps réel de la personalisation.<br>
-						De plus le site ce devait d'etre multilingue aussi bien pour le contenu du site que pour les guides à personaliser.
-					</p>
-					<a href="http://simgm.michelin.fr/fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a>
-				</div>
+			<div class="wrapper">
+			  <img class="maquette-ref" src="/assets/img/references/michelin-m.png" alt="Maquette Michelin">
+			  <article>
+			  	<div class="pic">
+				  	<img class="logo-ref svg" src="/assets/img/references/logo-michelin.svg" alt="Logo FFB">
+			  	</div>
+					<div class="infos">
+						<h2>Michelin</h2>
+						<p>
+							Michelin voulait développer une application permettant de générer des devis à partir d'une couverture personalisée de leur guide. Pour réaliser ce projet, Kilix a utilisé le canvas pour avoir un rendu en temps réel de la personalisation.<br>
+							De plus le site ce devait d'etre multilingue aussi bien pour le contenu du site que pour les guides à personaliser.
+						</p>
+						<a href="http://simgm.michelin.fr/fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a>
+					</div>
+			</article>
 			</div>
 		</div>
 	</section>
