--- a/views/references.html.twig
+++ b/views/references.html.twig
@@ -6,7 +6,8 @@
 		<div class="row">
 			<div class="large-9 columns">
 				<h1>Nos références <span></span><i class="icon-keyboard_arrow_down"> </i></h1>
-				<p>Les projets sur lesquels <strong>Kilix</strong> a travaillé sont très variés, aussi bien du coté des clients (Start-up, Grand comptes, Extia, ...)	que du coté des produits réalisés (Web App, Site vitrine, Site éditorial, ...).
+				<p>Kilix réalise des produits différents répondants à des besoins spécifiques en s’inscrivant dans une stratégie <strong>“user-centric”</strong>.
+				Que ce soit la digitalisation de processus RH, la réalisation d’un site institutionnel ou d’un outil de gestion de tournois, nous concentrons notre énergie pour satisfaire nos clients en produisant le plus de valeur possible pour leurs utilisateurs finaux.
 				</p>
 			</div>
 		</div>
@@ -23,11 +24,13 @@
 					<div class="infos">
 						<h2>Vamos</h2>
 						<p>
-							Vamos est le CRM-ERP (Solution logicielle de gestion commerciale et administrative) développé par Kilix pour Extia.
-							Pour ce projet Kilix a appliqué différentes stratégie agile, tels que la gestion par la valeur ou encore le pilotage de projets par les risques.<br>
-							Une équipe de 5 développeurs, 1 Scrum Master et 1 UI/UX Designer travail sur ce projet.
-							Il met en place des technologies qui ont fait leur preuves (Symfony, PostgreSQL) mais aussi des technologies plus récentes (NodeJS, ReactJS).
-							Pour s'adapter au mieux aux besoins du client.
+							Vamos est le coeur digitale d’Extia.<br>
+							Les premières releases avaient pour objectif de couvrir les besoins en CRM.
+						</p>
+						<p>
+							Grâce aux nombreux feedback et à une réalisation itérative/incrémentale, la direction d’Extia souhaite révolutionner les processus d’une société de conseil.
+							Nous allons gamifier la progression professionnelle des différents collaborateurs.
+							Grâce à des actions ludiques s’appuyant sur des technologies innovantes (node.js, React.js), nous pourrons enfin allier l’utile à l’agréable tout en répondant au besoin d’Extia.
 						</p>
 						{# <a href="http://cop21horizon.com/fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a> #}
 					</div>
