--- a/web/assets/scss/sections/references.scss
+++ b/web/assets/scss/sections/references.scss
@@ -25,8 +25,51 @@ div.references{
   .content{ background-image: linear-gradient(70deg,  rgba(236,236,245,1) 0%,rgba(236,236,245,1) 70%,rgba(230,230,237,1) 70%); padding: 0; }
   .columns{ padding: auto; }
 }
-.landing-references{  background-image: url('../img/landing-bg-agile.png'); background-size: cover; background-position: 50% 50%; }
+.landing-references{  background-image: url('../img/landing-bg-agile.jpg'); background-size: cover; background-position: 50% 50%; }
+div.references .landing{
+  p{
+    width: 80%;
+  }
+}
 
+.ref{
+  .wrapper{
+    article{
+      .infos{
+        .ref-btn-mobile{
+          display: inline-block;
+          position: relative;
+          width: 40px;
+          height: 40px;
+          line-height: 40px;
+          padding: 0 8px;
+          font-size: 1.5em;
+          background-color: #eff0f1;
+          text-align: center;
+          color: #2c313f;
+          overflow: hidden;
+          transition:color .3s $easingIn;
+          &:after{
+            content: '\e157';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            transform: translateX(-100%);
+            transition: transform .3s $easingIn;
+            background-color: #fff;
+            z-index: 0;
+          }
+          &:hover{
+            color: #eff0f1;
+            &:after{ transform: translateX(0%); }
+          }
+        }
+      }
+    }
+  }
+}
 
 @media #{$small-up}{
   .ref{
@@ -37,6 +80,7 @@ div.references{
     height: auto;
     background-color: #2c313f;
     color: #eff0f1;
+    font-size: 1rem;
     padding-bottom: 50px;
     padding-top: 20px;
     box-shadow: 0px -3px 15px rgba(0,0,0,.3);
@@ -47,38 +91,6 @@ div.references{
       max-height: 250px;
       margin: 0 auto;
       margin-bottom: 25px;
-    }
-    .ref-btn-mobile{
-      display: inline-block;
-      position: relative;
-      width: 40px;
-      height: 40px;
-      line-height: 40px;
-      padding: 0 8px;
-      font-size: 1.5em;
-      background-color: #eff0f1;
-      text-align: center;
-      color: #2c313f;
-      overflow: hidden;
-      transition:color .3s $easingIn;
-      &:after{
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        transform: translateX(-100%);
-        transition: transform .3s $easingIn;
-        background-color: #fff;
-        z-index: -1;
-      }
-      &:hover{
-        color: #eff0f1;
-        &:after{
-        transform: translateX(0%);
-        }
-      }
     }
     .infos{
       @include grid-column(12);
@@ -107,7 +119,7 @@ div.references{
       .maquette-ref{
         flex: 1 0 auto;
         position: relative;
-        height: 90%;
+        width: 60%;
       }
       article{
         flex: 1 1 auto;
@@ -140,9 +152,9 @@ div.references{
           height: 100%;
           margin: 0 auto;
           padding: 0 30px;
-
           z-index: 10;
           color: #eff0f1;
+
           >h2,
           >p,
           >a,
@@ -153,8 +165,10 @@ div.references{
             transform: translateY(0px);
           }
           p, ul{
+            font-size: 18px;
+            line-height: 1.5;
             color: #eff0f1;
-            a{
+            >a{
               position: relative;
               top: 3px;
               text-decoration: none;
@@ -201,7 +215,90 @@ div.references{
     }
   }
 }
-
+@media #{$large-only}{
+  .ref{
+    .wrapper{
+      .maquette-ref{
+        width: 30%;
+      }
+    }
+  }
+}
+@media #{$medium-only}{
+  .ref{
+    .wrapper{
+      position: relative;
+      width: 100%;
+      height: 100%;
+      .maquette-ref{
+        order: 2;
+        display: block;
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 90%;
+        margin: 0 auto;
+      }
+      article{
+        order: 1;
+        display: block;
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 90%;
+        margin: 0 auto;
+        .logo-ref{display: none;}
+        .infos{
+          float: none;
+          position: relative;
+          top: 0;
+          left: 0;
+          transform: translateY(0%);
+        }
+      }
+    }
+  }
+}
+@media #{$small-only}{
+  div.references{
+    .landing{
+      height: 35rem;
+    }
+  }
+  .ref{
+    .wrapper{
+      position: relative;
+      width: 100%;
+      height: 100%;
+      .maquette-ref{
+        order: 2;
+        display: block;
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 90%;
+        margin: 0 auto;
+      }
+      article{
+        order: 1;
+        display: block;
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 90%;
+        margin: 0 auto;
+        .logo-ref{display: none;}
+        .infos{
+          float: none;
+          position: relative;
+          top: 0;
+          left: 0;
+          transform: translateY(0%);
+        }
+      }
+    }
+  }
+}
 
 #vamos{
   background-color: $vamos-color;
@@ -216,12 +313,13 @@ div.references{
   background-color: $amnesty-color;
   .logo-ref{ height: 90px;}
   .infos{
+    color: #2c313f;
     p, ul{
       color: #2c313f;
       a{
         color: #2c313f;
         &:hover{color: #000;}
-        &:after{background-color: $amnesty-color;}
+        &:after{background-color: lighten($amnesty-color, 25%);}
       }
     }
   }
@@ -229,7 +327,6 @@ div.references{
     &:hover{ color: #eff0f1; }
     &:after{ background-color: darken($amnesty-color, 5%); }
   }
-  @media #{$large-up}{.infos{ color: #2c313f; } }
 }
 
 #horizon{
