fix assets to be loaded with https
Conflicts:
	web/assets/css/app.min.css

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -144,9 +144,9 @@
 					<h3>Boostez vos projets grâce à l'énergie d’Extia</h3>
 					<p>Nous nous appuyons sur l'expertise d’Extia, acteur reconnu du conseil depuis 7 ans, qui met à votre disposition ses meilleurs consultants et vous garantit l'atteinte de vos objectifs dans les délais impartis.</p>
 					{% if browser.browser == "IE" %}
-						<a href="http://www.extia.fr" target=_blank class="buttonIE extiaIE" title="EXTIA - Incubateur de talents"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
+						<a href="https://www.extia.fr" target=_blank class="buttonIE extiaIE" title="EXTIA - Incubateur de talents"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
 					{% else %}
-							<a href="http://www.extia.fr" target=_blank class="button" title="EXTIA - Incubateur de talents"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
+							<a href="https://www.extia.fr" target=_blank class="button" title="EXTIA - Incubateur de talents"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
 					{% endif %}
 				</article>
 				<div class="large-6 large-pull-6 medium-7  columns anim-item">
