--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>{{title}}</title>
 	<link rel="shortcut icon" href="favicon.ico">
-	<meta property="og:image" content="http://kilix.fr/assets/img/logo_x.png" />
+	<meta property="og:image" content="/assets/img/logo_x.png" />
 	<meta name="description" content="{{description}}" />
 	<link href="/assets/css/app.min.css" rel="stylesheet" type="text/css" media="all"/>
   <script src="/assets/js/vendor/modernizr-custom.js"></script>
@@ -75,7 +75,7 @@
 
               <a class="nav-link-contact hide-for-small-only" id='link-contact' data-pos="5" title="Contactez Kilix">Contact</a>
               <a class='nav-link blog' href="http://blog.kilix.fr" target="_blank" id='link-blog' title="Kilix - Blog">Blog</a>
-              <a class='nav-link extia' href="http://extia.fr" target="_blank" title="EXTIA - Incubateur de talents">
+              <a class='nav-link extia' href="https://extia.fr" target="_blank" title="EXTIA - Incubateur de talents">
                {% if ress.isMobile ==  true %}
                <img src="assets/img/logo_extia.png" alt="Logo extia"></a>
                {% else %}
@@ -98,7 +98,7 @@
 	</div>
 	<footer>
 			{#<div class="map">
-				<iframe width='100%' height='100%' src='http://a.tiles.mapbox.com/v3/bulby97.map-zj10lv4w/mm/index.html?secure=1#18/48.82681/2.22268'></iframe>
+				<iframe width='100%' height='100%' src='https://a.tiles.mapbox.com/v3/bulby97.map-zj10lv4w/mm/index.html?secure=1#18/48.82681/2.22268'></iframe>
 			</div>#}
 			<div class="copyright row">
 				<div class="medium-5 columns references-footer">
@@ -130,10 +130,10 @@
 
 				{% if ress.isMobile == false %}
 				<iframe allowtransparency="true" frameborder="0" scrolling="no"
-				src="https://platform.twitter.com/widgets/tweet_button.html?text=Kilix - L'Usine digitale&url=http://www.kilix.fr/"
+				src="https://platform.twitter.com/widgets/tweet_button.html?text=Kilix - L'Usine digitale&url=https://www.kilix.fr/"
 				style="border:none; overflow:hidden; height:35px;float:left;width: 100px;"></iframe>
 
-				<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.kilix.fr&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=35&amp;appId=236157703133683" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:35px;width: 200px;" allowTransparency="true"></iframe>
+				<iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.kilix.fr&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=35&amp;appId=236157703133683" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:35px;width: 200px;" allowTransparency="true"></iframe>
 				{% endif %}
 			</div>
 		</div>
