--- a/views/team.html.twig
+++ b/views/team.html.twig
@@ -35,7 +35,7 @@
 		<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
 			<div class="row cene">
 				<div class="large-12 medium-7 columns">
-						<img src="http://placehold.it/1600x500&text=cène" alt="">
+						<img src="https://placehold.it/1600x500&text=cène" alt="">
 				</div>
 			</div>
 		</section>
